--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "date-fns": "^2.28.0",
     "node-fetch": "^3.2.4",
     "prompt-sync": "^4.2.0",
     "readline-sync": "^1.4.10",
